# QtnProperty

./: .gitignore  CMakeLists.txt  README.md
Core/: CMakeLists.txt
Demo/: CMakeLists.txt
PropertyWidget/: CMakeLists.txt
PropertyWidget/Delegates/: PropertyDelegateAux.cpp  PropertyDelegateAux.h
PropertyWidget/Delegates/GUI/: PropertyDelegateQPen.cpp
cmake/: warnings.cmake
src/: dump.cpp
